--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Inicio</h1>
-        <br>
+        <a th:href="@{/agregar}">Crear Persona</a>
         <div th:if="${personas != null and !personas.empty}"> 
             <table border="1">
                 <tr>
@@ -14,6 +14,8 @@
                     <th>Apellido</th>
                     <th>Email</th>
                     <th>Telefono</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
                 </tr>
 
                 <tr th:each="persona : ${personas}">
@@ -21,6 +23,9 @@
                     <td th:text="${persona.apellido}">Mostrar apellido</td>
                     <td th:text="${persona.email}">Mostrar email</td>
                     <td th:text="${persona.telefono}">Mostrar telefono</td> 
+                    <td><a th:href="@{/editar/} + ${persona.idPersona}" th:text="editar"></a></td>
+                    <!--<td><a th:href="@{/eliminar/} + ${persona.idPersona}" th:text="eliminar"></a></td> --> <!-- 1ra forma de realizar una peticion por path  -->
+                    <td><a th:href="@{/eliminar(idPersona=${persona.idPersona})}" th:text="eliminar"></a></td>  <!-- 2da forma de realizar una peticion por query paramether-->
                 </tr>
             </table>
         </div>
