--- a/src/main/resources/templates/modificar.html
+++ b/src/main/resources/templates/modificar.html
@@ -13,18 +13,21 @@
             <br>
             <label for="nombre">Nombre:</label>
             <input type="text" name="nombre" th:field="*{nombre}">
+            <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}">Error Nombre</span> <!-- Sintaxis para validar si un campo del formulario tiene errores -->
             <br>
             <label for="apellido">Apellido</label>
             <input type="text" name="apellido" th:field="*{apellido}">
+            <span th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}">Error Apellido</span>
             <br>
             <label for="email">Email</label>
-            <input type="email" name="email" th:field="*{email}">
+            <input type="text" name="email" th:field="*{email}">
+            <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error Email</span>
             <br>
             <label for="telefono">Telefono</label>
             <input type="tel" name="telefono" th:field="*{telefono}">
             <br>
-            <input type="submit" name="guardar" value="guardar">
+            <input type="submit" name="guardar" value="Guardar">
         </form>
-        
+
     </body>
 </html>
