--- a/src/main/resources/templates/modificar.html
+++ b/src/main/resources/templates/modificar.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Datos de la persona</h1>
+        <header th:replace="layout/plantilla :: header"></header> <!-- sintaxis para llamar una plantilla con thymeleaf -->
         <a th:href="@{/}">Regresar</a>
         <br/>
         <form th:action="@{/guardar}" method="post" th:object="${persona}">
@@ -28,6 +28,6 @@
             <br>
             <input type="submit" name="guardar" value="Guardar">
         </form>
-
+        <footer th:replace="layout/plantilla :: footer"></footer>
     </body>
 </html>
