--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,16 +6,16 @@
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"></header> <!-- sintaxis para llamar una plantilla con thymeleaf -->
-        <a th:href="@{/agregar}">Crear Persona</a>
+        <a th:href="@{/agregar}" th:text="#{persona.crear}"></a>
         <div th:if="${personas != null and !personas.empty}"> 
             <table border="1">
                 <tr>
-                    <th>Nombre</th>
-                    <th>Apellido</th>
-                    <th>Email</th>
-                    <th>Telefono</th>
-                    <th>Editar</th>
-                    <th>Eliminar</th>
+                    <th>[[#{persona.nombre}]]</th>
+                    <th>[[#{persona.apellido}]]</th>
+                    <th>[[#{persona.email}]]</th>
+                    <th>[[#{persona.telefono}]]</th>
+                    <th>[[#{accion.editar}]]</th>
+                    <th>[[#{accion.eliminar}]]</th>
                 </tr>
 
                 <tr th:each="persona : ${personas}">
@@ -23,14 +23,14 @@
                     <td th:text="${persona.apellido}">Mostrar apellido</td>
                     <td th:text="${persona.email}">Mostrar email</td>
                     <td th:text="${persona.telefono}">Mostrar telefono</td> 
-                    <td><a th:href="@{/editar/} + ${persona.idPersona}" th:text="editar"></a></td>
+                    <td><a th:href="@{/editar/} + ${persona.idPersona}" th:text="#{accion.editar}"></a></td>
                     <!--<td><a th:href="@{/eliminar/} + ${persona.idPersona}" th:text="eliminar"></a></td> --> <!-- 1ra forma de realizar una peticion por path  -->
-                    <td><a th:href="@{/eliminar(idPersona=${persona.idPersona})}" th:text="eliminar"></a></td>  <!-- 2da forma de realizar una peticion por query paramether-->
+                    <td><a th:href="@{/eliminar(idPersona=${persona.idPersona})}" th:text="#{accion.eliminar}"></a></td>  <!-- 2da forma de realizar una peticion por query paramether-->
                 </tr>
             </table>
         </div>
         <div th:if="${personas == null or personas.empty}"> 
-            La lista de personas está vacía
+            [[#{persona.lista-vacia}]]
         </div>   
         <footer th:replace="layout/plantilla :: footer"></footer>
     </body>
