--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,37 +1,12 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"> <!-- properties para agregar al html las funcionalidades de thymeleaf, ignorar errores de sintaxis ocasionados por thymeleaf y seguridad con thymeleaf -->
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>Inicio</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"></header> <!-- sintaxis para llamar una plantilla con thymeleaf -->
-        <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/agregar}" th:text="#{persona.crear}"></a>
-        <div th:if="${personas != null and !personas.empty}"> 
-            <table border="1">
-                <tr>
-                    <th>[[#{persona.nombre}]]</th>
-                    <th>[[#{persona.apellido}]]</th>
-                    <th>[[#{persona.email}]]</th>
-                    <th>[[#{persona.telefono}]]</th>
-                    <th sec:authorize="hasRole('ROLE_ADMIN')">[[#{accion.editar}]]</th>
-                    <th sec:authorize="hasRole('ROLE_ADMIN')">[[#{accion.eliminar}]]</th>
-                </tr>
-
-                <tr th:each="persona : ${personas}">
-                    <td th:text="${persona.nombre}"> Mostrar nombre</td>
-                    <td th:text="${persona.apellido}">Mostrar apellido</td>
-                    <td th:text="${persona.email}">Mostrar email</td>
-                    <td th:text="${persona.telefono}">Mostrar telefono</td> 
-                    <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/editar/} + ${persona.idPersona}" th:text="#{accion.editar}"></a></td>
-                    <!--<td><a th:href="@{/eliminar/} + ${persona.idPersona}" th:text="eliminar"></a></td> --> <!-- 1ra forma de realizar una peticion por path  -->
-                    <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/eliminar(idPersona=${persona.idPersona})}" th:text="#{accion.eliminar}"></a></td>  <!-- 2da forma de realizar una peticion por query paramether-->
-                </tr>
-            </table>
-        </div>
-        <div th:if="${personas == null or personas.empty}"> 
-            [[#{persona.lista-vacia}]]
-        </div>   
+        <section th:replace="layout/botonesAgregar :: botonesAgregar"></section> 
+        <section th:replace="layout/agregarCliente :: agregarCliente"></section>
+        <section th:replace="layout/listadoClientes :: listadoClientes"></section>  
         <footer th:replace="layout/plantilla :: footer"></footer>
     </body>
 </html>
